[gd_scene load_steps=3 format=3 uid="uid://cl6ifn75nogh8"]

[ext_resource type="Script" path="res://Escenas/nivel1_Mario/Interacciones/papiro_1.gd" id="1_74oug"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_orv2q"]
size = Vector2(42, 45)

[node name="Papiro1" type="StaticBody2D"]
script = ExtResource("1_74oug")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_orv2q")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -54.0
offset_top = -77.0
offset_right = 56.0
offset_bottom = -18.0
theme_type_variation = &"HeaderSmall"
theme_override_font_sizes/font_size = 10
text = "Interactuar
[E]"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
